# l4tt1ce

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  showcase_channelObstacle.py  showcase_channelObstacle3D.py  showcase_heatedObject.py
lbm_engine/: lbm_collisionOperators.py  lbm_descriptors.py  lbm_geometry.py  lbm_operators.py  lbm_simulationcore.py  lbm_visualize.py
