[tool.poetry]
name = "l4tt1ce"
version = "0.1.0"
description = "basic implementation of lattice boltzmann in python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <=3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
pyevtk = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
